2012-09-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Add appendix "GNU Software".

	* doc/alive.texi (GNU Software): New node/appendix.
	(Top): Add "GNU Software" to menu.
	(Features): Replace footnotes for GNU Inetutils
	and GNU Guile w/ ‘GNU Software’ pxrefs.
	(Phase 1): Likewise, for GNU Autoconf and GNU Automake.
	(Invoking alive): Likewise, for GNU Bash.

2012-08-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Add some @cindex entries.

	* doc/alive.texi (Features, Phase 1, Invoking alive)
	(Configuration, Generally Sexp-ing, hosts, period):
	Add @cindex entries.

2012-08-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Fix typo: Spell "received" correctly.

	* doc/alive.texi (Invoking alive): Spell "received" correctly.

2012-08-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Use email address for bug reports.

	* configure.ac (AC_INIT): Use email address for bug reports.

2012-08-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 2.0.0

	* configure.ac (AC_INIT): Bump version to "2.0.0" for release.

2012-08-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Decruft: Drop URLs for phase 1 peers.

	* doc/alive.texi (Top): Remove ‘Phase 1 Peers’ from menu.
	(Phase 1): Don't pxref ‘Phase 1 Peers’; add footnote, instead.
	(Phase 1 Peers): Delete node/appendix.

2012-08-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Rewrite from scratch.

	We retain only AUTHORS and the name of the project.
	Every other file was either deleted or rewritten.
	Notable losses: "auto-login" feature, internationalization,
	Debian packaging support, infrastructure for C programs.

2005-10-29  Joachim Nilsson  <joachim.nilsson@member.fsf.org>

	* src/log.c (write_logfile): Remove MAXDATASIZE dependency AND
	local alloca():d buffer.  The syslog() call can take varargs.

	* configure.ac: Fix --enable-debug to actually set -O0 and to
	remove -g from regular builds.  Also added a neat printout of
	detected and configured settings last.

	* src/lock.c: Merge last fixes from coding session with Jakob.
